--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ avatar: "/img/photo.jpg"
 # List of links in the navigation bar
 navbar-links:
   Home: ""
+  Resume: "resume"
   
 # --- Footer options --- #
 
